# Transfer-file-over-UDP

./: CMakeLists.txt  README.md
Client/: Client.c  ClientReceiver.h  ClientSender.h  clientreliablemsg.h  timeoutlist.h
Client/Upload/: Canzoniere.txt
IIW_Project-master/: README.md
IIW_Project-master/Client/: Client  clientfileoperation.h
IIW_Project-master/Client/Download/: Decamerone.txt
IIW_Project-master/Client/Upload/: Infinito.txt  LaCittaMorta.txt
IIW_Project-master/Server/: Lista.txt~  Server  ServerReceiver.h  s  serverfileoperation.h  servreliablemsg.h  timerlist.h
IIW_Project-master/Server/Server_file/: Autori_Progetto.txt  OrlandoFurioso.txt  seat.txt
Server/: Lista.txt  Server.c  ServerSender.h
